tahini/tests/error.tah
print a;

// RuntimeError: Undefined variable 'a'.
// [line 1]
